Fix for text area on responsive edit view so that it does not overflow outside table border.

--- a/themes/suiteresponsive/css/style.css
+++ b/themes/suiteresponsive/css/style.css
@@ -4756,7 +4756,9 @@ only screen and (max-width: 760px)
 @media
 only screen and (max-width: 760px)
 {
-
+    edit.view{
+        margin:0 10px 0 10px;
+    }
     /* Force table to not be like tables anymore */
     .edit table, .edit thead, .edit tbody, .edit th, .edit td, .edit tr {
         display: block;
@@ -4773,7 +4775,7 @@ only screen and (max-width: 760px)
         background:#eeeeee;
         border:1px solid #cccccc;
         margin:10px 0 0 0;
-        padding:8px;
+        padding:8px 0 8px 0;
         -webkit-border-top-left-radius: 5px;
         -webkit-border-top-right-radius: 5px;
         -moz-border-radius-topleft: 5px;
@@ -4785,6 +4787,9 @@ only screen and (max-width: 760px)
     .edit tr td[scope="col"]{
         font-weight:bold;
     }
+    td textarea {
+        width:95%;
+    }
 }
 
 @media (max-width:640px) {
@@ -4793,6 +4798,9 @@ only screen and (max-width: 760px)
     }
     .edit tr {
         border-bottom: 1px solid #cccccc;
+    }
+    textarea {
+        width:50%;
     }
 }
 
